# grow-a-cache

./: .gitignore  Cargo.toml  DISCUSSION.md  PROMPT.md  README.md  RESEARCH_KV_CACHE_ARCHITECTURES.md  config.example.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-commit-check.sh
.claude/skills/assumptions/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/experiment-release/: SKILL.md
.claude/skills/milestone-documentation/: SKILL.md
.claude/skills/overhead-analysis/: SKILL.md
.claude/skills/pre-commit-checks/: SKILL.md
docs/: ASSUMPTIONS.md  architecture.d2  architecture.md  overhead-analysis.md
docs/plans/: 2025-12-22-resp-protocol-design.md
docs/v0/: critique.md  discussion.md  planning.md
docs/v1/: critique.md  discussion.md  planning.md
docs/v2/: discussion.md  planning.md
docs/v3/: discussion.md  planning.md
src/: config.rs  main.rs  request.rs  server.rs  storage.rs
src/protocols/: mod.rs
src/protocols/echo/: handler.rs  mod.rs  parser.rs
src/protocols/memcached/: handler.rs  mod.rs  parser.rs
src/protocols/ping/: handler.rs  mod.rs  parser.rs
src/protocols/resp/: handler.rs  mod.rs  parser.rs
src/runtime/: buffer.rs  connection.rs  mod.rs  protocol.rs  request.rs  token.rs
src/runtime/kqueue/: event_loop.rs  mod.rs
src/runtime/mio/: event_loop.rs
src/runtime/mio_impl/: mod.rs
src/runtime/uring/: buf_ring.rs  event_loop.rs  mod.rs
tests/: functional.sh
