[package]
name = "grow-a-cache"
version = "0.1.0"
edition = "2021"
description = "A memcached-compatible cache server with text protocol support"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration file parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Efficient byte handling
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
