[package]
name = "grow-a-cache"
version = "0.1.0"
edition = "2021"
description = "A memcached-compatible cache server with text protocol support"
license = "Apache-2.0"

[dependencies]
# Async runtime (kept for protocol handlers during transition)
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration file parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Efficient byte handling
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

# Runtime infrastructure
libc = "0.2"
slab = "0.4"
socket2 = { version = "0.5", features = ["all"] }

# Linux io_uring support
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

# macOS mio/kqueue support
[target.'cfg(target_os = "macos")'.dependencies]
mio = { version = "1.0", features = ["os-poll", "net"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
